[package]
name = "runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_runtime"
path = "src/lib.rs"
bench = false

[features]
check_complete_parse = []
arrayvec_fixseq = ["arrayvec"]
arrayvec_limseq = ["arrayvec"]
enc_len_estimable_override = []
invalid_range_checking = []
implicit_hexstring = []
check_padding = []
index_binary_formatting = []
unfreeze_spanbuffer = []
smallvec_framestack = ["smallvec"]

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-integer = "0.1"
encode_derive = { path = "encode_derive", version = "0.1.0" }
decode_derive = { path = "decode_derive", version = "0.1.0" }
estimable_derive = { path = "estimable_derive", version = "0.1.0" }
arrayvec = { version = "0.7.2", optional = true }
smallvec = { version = "1.8.0", optional = true, features = ["const_new", "const_generics", "union"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "hexeq_bench"
harness = false

